[tool.poetry]
name = "flow-py-sdk-legacy"
version = "0.0.0"
description = "A python SDK for the flow blockchain"
authors = ["Janez Podhostnik <janez.podhostnik@gmail.com>", "justin.kc.herrera@gmail.com"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/justinnout/flow-py-sdk"
packages = [
    { include = "flow_py_sdk" },
]

[tool.poetry.dependencies]
python = "^3.8"
betterproto = {extras = ["compiler"], version = "v2.0.0-beta6"}
grpcio-tools = "^1.50.0"
ecdsa = "^v0.16"
rlp = "^3.1.1"
grpclib = "^0.4.1"

[tool.poetry.dev-dependencies]
coloredlogs = "^15.0"
toml = "^0.10"
black = "^23.1"
pytest = "^7.2"
mkdocs = "^1.4"
mkdocs-material = "^9.0"
mkdocstrings = "^0.20"
coverage = "^7.1"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
examples = 'examples.main:run'
